--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,4 +17,10 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+	
+	RewriteEngine On
+RewriteCond %{REQUEST_URI} !^naijatop100hitz
+RewriteRule ^(.*)$ naijatop100hitz/$1 [L]
+	
+	
 </IfModule>
