--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,9 @@
     </IfModule>
 
     RewriteEngine On
-
+	
+RewriteCond %{REQUEST_URI} \.php/ [INC]
+RewriteRule ^(.*)\.php/(.*)$ /$1 [L]
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -18,9 +20,7 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 	
-	RewriteEngine On
-RewriteCond %{REQUEST_URI} !^naijatop100hitz
-RewriteRule ^(.*)$ naijatop100hitz/$1 [L]
+
 	
 	
 </IfModule>
